...
                    )

                    val success = paymentsRepository.processPayment(payment)
                    _state.update { it.copy(
                        isLoading = false,
                        message = if(success){
                            "Payment sent!"
                        }
                        else{
                            "Failed to send payment"
                        }
                    )
                    }
...
